--- a/vpn/libreswan/libreswan.ui
+++ b/vpn/libreswan/libreswan.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>OpenswanWidget</class>
- <widget class="QWidget" name="OpenswanWidget">
+ <class>LibreswanWidget</class>
+ <widget class="QWidget" name="LibreswanWidget">
   <property name="geometry">
    <rect>
     <x>0</x>
